--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
+body {
+  width: 50%;
+  margin: 0 auto;
+}
+
+
+.main {
+  background-color: #ddd;
+  padding: 10px;
+  margin-top: 50px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px #ddd;
+}
+
+header {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header h1 {
+  font-size: 50px;
+  color: #2c3e50;
+  font-weight:600;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.add-todo {
+  margin-right: 10px;
+  font-size: 20px;
+  background-color: #842029;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  text-decoration: none;
+  padding: 5px 32px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+.input {
+  font-size: 20px;
+  color: #842029;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #842029;
+  padding: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.task {
+  background-color: #842029;
+  padding: 15px;
+  margin: 5px;
+  overflow-x: hidden;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+.task span {
+  color: #FFFFFF;
+}
+
+.icon {
+  float: right;
+  margin-right: 20px;
+}
+
+article {
+  display: grid;
+}
+
+.edit-todo{
+  width: 85%;
+  font-size: 16px;
+  color: #FFFFFF;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #FFFFFF;
+  outline: none;
+}
+
+
+
+
+
+/* responsive */
+
+@media screen and (max-width: 1200px) {
+  header h1 {
+    font-size: 50px;
+    font-weight: 600;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 1024px) {
+  
+  header h1 {
+    font-size: 45px;
+    font-weight: 600;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  
+  header h1 {
+    font-size: 42px;
+    font-weight: 600;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  
+  header h1 {
+    font-size: 33px;
+    font-weight: 600;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    width: 90%;
+  }
+  header h1 {
+    font-size: 20px;
+    font-weight: 600;
+  }
+}
+
+@media only screen and (max-width: 600px) and (min-width: 320px) 
+{
+  body {
+    width: 90%;
+  }
+  header h1 {
+    font-size: 20px;
+    font-weight: 600;
   }
 }
